
	GonoszTopi:
		* Added ability to compile amulecmd without threading support.
		* Sed denoiser - removes excessive messages from compilation - 
		  Thanks to Vollstrecker for the idea and discussions.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed source seeds handling on startup.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CCs CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.

	Hermit:
		* Patch for amulecmd history which ensures that when the same command
		  is repeated several times in a row it only gets recorded in the
		  history once.

	jcoy:
		* Set download priority in amulecmd.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

	Kry:
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6

	LittleAbacus:
		* Patch to show part file numbers.

	nvinay:
		* Trivial issue with memset found using google codesearch which may
		affect only the debugging.

	Phoenix:
		* Fix for crash in amulegui/DownloadListCtrl.cpp.
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.
		* Fix for server disconnection during global search.
		* No more wxARRAY's in amuleweb.
		* Fixed bug in mutex code in amuleweb (s_mutex_wcThreads).
		* No more wxARRAY's in aMule code.
		* Fixed bug in ECPacket.cpp: assignment inside assertion.
		* Changed CECSocket constructor to be exception safe.
		* Fix for invalid rectangle size on COScopeCtrl::PlotHistory().
		* Removed the default constructor for Kademlia contacts.
		* Fix for "get bwlimits" command in amulecmd always returning
		  zero for maximum download value.
		* Added UPnP support.
		* Fix for crash in ECSocket.cpp.