@@ -43,7 +43,7 @@ public final static byte EC_OP_FAILED                        = 0x05;
 public final static byte EC_OP_STRINGS                       = 0x06;
 public final static byte EC_OP_MISC_DATA                     = 0x07;
 public final static byte EC_OP_SHUTDOWN                      = 0x08;
-public final static byte EC_OP_ED2K_LINK                     = 0x09;
+public final static byte EC_OP_ADD_LINK                      = 0x09;
 public final static byte EC_OP_STAT_REQ                      = 0x0A;
 public final static byte EC_OP_GET_CONNSTATE                 = 0x0B;
 public final static byte EC_OP_STATS                         = 0x0C;
